# bootstrap-c

./: .gitignore  Makefile  Readme.md  ast.b  bar.b  bootstrap.b  bootstrap.c  bootstrap.nix  emit_llvm.b  enum_broken.c  flake.nix  format.b  grammar.y  libc.b  main.c  parse.b  print_ast.b  sema.b  test.b  test.c  util.b
.github/workflows/: make.yml
bootstrap-nvim/lua/: bootstrap.lua
bootstrap-nvim/plugin/: bootstrap.lua
bootstrap-nvim/syntax/: bootstrap.vim
src/: ast.b  bootstrap.b  emit_llvm.b  format.b  ir.b  irgen.b  libc.b  parse.b  sema.b  util.b
src/ast/: print.b  token.b
src/emit/: decl.b  expr.b  (+4 more)
test/: bool.b  const.b  func.b  func_decls.b  imports.b  libc.b  libc_file.b  lit.cfg  struct_assign.b  struct_call.b  struct_expr.b  struct_param.b  struct_ret.b  target_path.b  test.b  union.b
tree-sitter-bootstrap/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
tree-sitter-bootstrap/bindings/c/: tree-sitter-bootstrap.pc.in
tree-sitter-bootstrap/bindings/go/: binding.go  binding_test.go
tree-sitter-bootstrap/bindings/node/: binding.cc  index.js
tree-sitter-bootstrap/bindings/python/tests/: test_binding.py
tree-sitter-bootstrap/bindings/python/tree_sitter_bootstrap/: __init__.py  binding.c
tree-sitter-bootstrap/bindings/rust/: build.rs  lib.rs
tree-sitter-bootstrap/bindings/swift/TreeSitterBootstrap/: bootstrap.h
tree-sitter-bootstrap/bindings/swift/TreeSitterBootstrapTests/: TreeSitterBootstrapTests.swift
tree-sitter-bootstrap/src/: grammar.json  node-types.json  parser.c
(+21 files in other folders)
